# game

./: CMakeLists.txt
src/: main.cpp
src/api/: BalanceController.cpp  BalanceController.h  GameController.cpp  GameController.h  HttpServer.cpp  HttpServer.h  SessionController.cpp  SessionController.h
src/core/math/: GameMathConfig.cpp  GameMathConfig.h  MathEngine.cpp  MathEngine.h
src/core/model/: Round.h  Session.h  Transaction.h
src/core/rng/: IRng.h  SystemRng.cpp  SystemRng.h
src/integration/: DummyAggregatorClient.cpp  DummyAggregatorClient.h  IAggregatorClient.h
src/persistence/: InMemoryRoundRepository.cpp  InMemoryRoundRepository.h  InMemorySessionRepository.cpp  InMemorySessionRepository.h  InMemoryTransactionRepository.cpp  InMemoryTransactionRepository.h  RoundRepository.h  SessionRepository.h  TransactionRepository.h
src/session/: RoundService.cpp  RoundService.h  SessionManager.cpp  SessionManager.h
src/util/: JsonUtils.cpp  JsonUtils.h  Logger.h
storage/: rtp_probabilities.json  win_ranges.json
